maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:19: error: illegal start of simple expression
		}
                ^